--- a/hackathons.html
+++ b/hackathons.html
@@ -719,7 +719,7 @@
                         <div class="event-card virtual">
                             <div class="card-header">
                                 <div class="header-left">
-                                    <h3 class="event-title">HackFiesta Miami</h3>
+                                    <h3 class="event-title">HackFiesta Miami 2025</h3>
                                     <div class="event-date">
                                         <i class="bi bi-calendar-event"></i>
                                         March 21-23, 2025
@@ -766,7 +766,7 @@
                         <div class="event-card hybrid">
                             <div class="card-header">
                                 <div class="header-left">
-                                    <h3 class="event-title">305 Hackathon Edition: Spring</h3>
+                                    <h3 class="event-title">305 Hackathon Edition: Spring 2025</h3>
                                     <div class="event-date">
                                         <i class="bi bi-calendar-event"></i>
                                         March 29-31, 2025
@@ -813,7 +813,7 @@
                         <div class="event-card virtual">
                             <div class="card-header">
                                 <div class="header-left">
-                                    <h3 class="event-title">CodeStorm</h3>
+                                    <h3 class="event-title">CodeStorm 2025</h3>
                                     <div class="event-date">
                                         <i class="bi bi-calendar-event"></i>
                                         May 19-26, 2025
@@ -859,7 +859,7 @@
                         <div class="event-card virtual">
                             <div class="card-header">
                                 <div class="header-left">
-                                    <h3 class="event-title">SummerCodeX</h3>
+                                    <h3 class="event-title">SummerCodeX 2025</h3>
                                     <div class="event-date">
                                         <i class="bi bi-calendar-event"></i>
                                         July 21-28, 2025
@@ -893,9 +893,9 @@
                                     <i class="bi bi-info-circle"></i>
                                     Register Now
                                     </a>
-                                <a href="#" class="button">
+                                <a href="HACK-4-SummerCodeX25.HTML" class="button">
                                     <i class="bi bi-info-circle"></i>
-                                    Website Under Construction
+                                    Learn More
                                 </a>
                             </div>
                         </div>
@@ -906,7 +906,7 @@
                         <div class="event-card in-person">
                             <div class="card-header">
                                 <div class="header-left">
-                                    <h3 class="event-title">305 Hackathon Edition: Fall</h3>
+                                    <h3 class="event-title">305 Hackathon Edition: Fall 2025</h3>
                                     <div class="event-date">
                                         <i class="bi bi-calendar-event"></i>
                                         September 20-22, 2025
@@ -953,7 +953,7 @@
     <div class="event-card virtual">
         <div class="card-header">
             <div class="header-left">
-                <h3 class="event-title">EmpowHER Hackathon</h3>
+                <h3 class="event-title">EmpowHER Hackathon 2025</h3>
                 <div class="event-date">
                     <i class="bi bi-calendar-event"></i>
                     October 13-20, 2025
@@ -986,9 +986,9 @@
                 <i class="bi bi-info-circle"></i>
                 Register Now
                 </a>
-            <a href="#" class="button">
+            <a href="HACK-6-EmpowHER25.HTML" class="button">
                 <i class="bi bi-info-circle"></i>
-                Website Under Construction
+                Learn More
             </a>
         </div>
     </div>
@@ -999,7 +999,7 @@
     <div class="event-card virtual">
         <div class="card-header">
             <div class="header-left">
-                <h3 class="event-title">CodeFest</h3>
+                <h3 class="event-title">CodeFest 2026</h3>
                 <div class="event-date">
                     <i class="bi bi-calendar-event"></i>
                     December 08-15, 2025
@@ -1032,13 +1032,113 @@
                 <i class="bi bi-info-circle"></i>
                 Register Now
                 </a>
-            <a href="#" class="button">
+            <a href="HACK-7-CodeFest25.HTML" class="button">
                 <i class="bi bi-info-circle"></i>
-                Website Under Construction
+                Learn More
             </a>
         </div>
     </div>
 </div>
+
+<!-- HackFiesta Miami 2026 -->
+<div class="timeline-event" data-event-date="2026-03-09">
+    <div class="event-card virtual">
+        <div class="card-header">
+            <div class="header-left">
+                <h3 class="event-title">HackFiesta Miami 2026</h3>
+                <div class="event-date">
+                    <i class="bi bi-calendar-event"></i>
+                    March 9-15, 2026
+                </div>
+            </div>
+            <div class="header-right">
+                <span class="event-badge">Virtual</span>
+                <div class="countdown">
+                    <span class="countdown-value"></span> until start
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="theme-container">
+                <i class="bi bi-lightbulb theme-icon"></i>
+                <div class="theme-content">
+                    <div class="theme-title">Theme</div>
+                    <div class="theme-text">Global Impact</div>
+                    <div class="tag-list">
+                        <span class="tag">Global Impact</span>
+                        <span class="tag">Innovation</span>
+                        <span class="tag">Sustainability</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <!-- Register Now -->
+            <a href="https://go.fiu.edu/cc-hacks" class="button">
+                <i class="bi bi-info-circle"></i>
+                Register Now
+            </a>
+            <a href="HACK-8-HackFiestaMiami26.HTML" class="button">
+                <i class="bi bi-info-circle"></i>
+                Learn More
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- 305 Hackathon Edition: Spring 2026 -->
+<div class="timeline-event" data-event-date="2026-03-28">
+    <div class="event-card hybrid">
+        <div class="card-header">
+            <div class="header-left">
+                <h3 class="event-title">305 Hackathon Edition: Spring 2026</h3>
+                <div class="event-date">
+                    <i class="bi bi-calendar-event"></i>
+                    March 28-30, 2026
+                </div>
+            </div>
+            <div class="header-right">
+                <span class="event-badge">Hybrid</span>
+                <div class="countdown">
+                    <span class="countdown-value"></span> until start
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="theme-container">
+                <i class="bi bi-lightbulb theme-icon"></i>
+                <div class="theme-content">
+                    <div class="theme-title">Theme</div>
+                    <div class="theme-text">Tech for Good, AI & Blockchain</div>
+                    <div class="tag-list">
+                        <span class="tag">Tech for Good</span>
+                        <span class="tag">AI</span>
+                        <span class="tag">Blockchain</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <!-- Register Now -->
+            <a href="https://go.fiu.edu/cc-hacks" class="button">
+                <i class="bi bi-info-circle"></i>
+                Register Now
+            </a>
+            <a href="HACK-9-305HackathonSpring26.HTML" class="button">
+                <i class="bi bi-info-circle"></i>
+                Learn More
+            </a>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
 </div>
 </section>
 
