--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
                         © <script>document.write(new Date().getFullYear())</script> Code Crunch. All rights reserved.
                     </p>
                     <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 1rem;">
-                        Built with ❤️ for the FIU tech community by <a href="https://www.linkedin.com/in/iba001/" target="_blank" style="color: #4ecdc4; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">Brian Bazurto</a> | Powered by innovation and collaboration
+                        Built with ❤️ for the tech community by <a href="https://www.linkedin.com/in/iba001/" target="_blank" style="color: #4ecdc4; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">Brian Bazurto</a> | Powered by innovation and collaboration
                     </p>
                 </div>
             </div>
