--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
                                 </a>
                             </h3>
                             <p class="text-sm text-gray-600">Program Manager</p>
-                            <p class="text-xs mt-2 text-gray-500">Computer Science student @ FIU</p>
+                            <p class="text-xs mt-2 text-gray-500">Computer Science student @ Miami Dade College </p>
                         </div>
                     </div>
                 </div>
