--- a/index.html
+++ b/index.html
@@ -703,12 +703,11 @@
                     
                     <!-- Mentor Connect Card -->
                     <div class="bg-white p-6 rounded-lg shadow hover:shadow-md transition-shadow">
-                        <h3 class="text-xl font-bold mb-3 cc-blue-text">Mentor Connect</h3>
+                        <h3 class="text-xl font-bold mb-3 cahsi-blue-text">Mentor Connect</h3>
                         <p class="text-gray-600 mb-4">Connect with industry professionals and experienced developers for guidance and advice.</p>
-                        <a href="community-access.html" class="text-blue-600 font-medium hover:text-blue-800">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdyNQCvXIRRWOSmLvwT2jzM8apkmuC7Hp1J-knhPUHnC8DRmA/viewform?usp=dialog" class="text-blue-600 font-medium hover:text-blue-800">
                             Find a mentor <span aria-hidden="true">→</span>
                         </a>
-                    </div>
                 </div>
             </div>
         </section>
@@ -881,7 +880,7 @@
                                     <i class="fas fa-users text-xl"></i>
                                     <span class="text-xs mt-1">GroupMe</span>
                                 </a>
-                                <a href="https://fiu.zoom.us/j/84519758626?pwd=SoHxgbkfCrTLCjwy0faEKjdG2cQKYx.1#success" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://hack-university.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-video text-xl"></i>
                                     <span class="text-xs mt-1">Zoom</span>
                                 </a>
@@ -893,11 +892,11 @@
                                     <i class="fas fa-briefcase text-xl"></i>
                                     <span class="text-xs mt-1">EpicHire</span>
                                 </a>
-                                <a href="https://docs.google.com/document/d/1ylVviQu2pvgRRjEJTpgttM6h-pgCoWCF72ATOZIyLnM/edit?tab=t.0#heading=h.lrix7ec7j0b3" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://witty-suede-4a1.notion.site/ebd/1fe7f868cc8c8042b1ebfebc42034954" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-book text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Course Schedule</span>
                                 </a>
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSevXbZJFyVygCM-jbfTrw_LxRR_CQSpjm-mFgitQDCTS48Fbw/viewform" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScOA6IBnLxnxEnk-BOaXYyPXpJ3dU6Cu4OOrPJ7ErOgKvIdEQ/viewform?usp=dialog" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-clipboard-check text-xl"></i>
                                     <span class="text-xs mt-1">Attendance</span>
                                 </a>
@@ -909,12 +908,12 @@
                         <ul class="space-y-2">
                             <li><a href="index.html#mission" class="text-sm opacity-80 hover:opacity-100">Mission</a></li>
                             <li><a href="index.html#events" class="text-sm opacity-80 hover:opacity-100">Events</a></li>
-                            <li><a href="index.html#hackathons" class="text-sm opacity-80 hover:opacity-100">Hackathons</a></li>
-                            <li><a href="membership.html" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
+                            <li><a href="https://ba-00001.github.io/codecrunchclub/hackathons.html" class="text-sm opacity-80 hover:opacity-100">Hackathons</a></li>
+                            <li><a href="community-access.html" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
                             <li><a href="#" class="text-sm opacity-80 hover:opacity-100">Join E-Board</a></li>
                             <li><a href="index.html#resources" class="text-sm opacity-80 hover:opacity-100">Resources</a></li>
                             <li><a href="index.html#connect" class="text-sm opacity-80 hover:opacity-100">Connect</a></li>
-                            <li><a href="#" target="_blank" rel="noopener noreferrer" class="text-sm opacity-80 hover:opacity-100">Join Discord</a></li>
+                            <li><a href="community-access.html" target="_blank" rel="noopener noreferrer" class="text-sm opacity-80 hover:opacity-100">Join Discord</a></li>
                         </ul>
                     </div>
                     <div>
