--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     <div class="bg-white p-6 rounded-lg shadow hover:shadow-md transition-shadow">
                         <h3 class="text-xl font-bold mb-3 cc-blue-text">Learning Paths</h3>
                         <p class="text-gray-600 mb-4">Discover guided learning paths for various tech disciplines, from beginner to advanced.</p>
-                        <a href="community-access.html" class="text-blue-600 font-medium hover:text-blue-800">
+                        <a href="technical-learning.html" class="text-blue-600 font-medium hover:text-blue-800">
                             Explore learning paths <span aria-hidden="true">→</span>
                         </a>
                     </div>
