--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <span class="text-sm cc-orange-text font-medium">CRUNCH</span>
                 </div>
             </div>
-            <a href="donate.html" class="donate-btn w-full justify-center">
+            <a href="https://hack-university-fundraiser.vercel.app/" class="donate-btn w-full justify-center">
                 <i class="fas fa-heart"></i>
                 Support Hack University
             </a>
@@ -357,7 +357,7 @@
                 <div class="flex items-center space-x-4">
                     <!-- Compact donate button for larger screens -->
                     <div class="hidden sm:block">
-                        <a href="donate.html" class="header-donate-btn">
+                        <a href="https://hack-university-fundraiser.vercel.app/" class="header-donate-btn">
                             <i class="fas fa-heart"></i>
                             <span class="hidden md:inline">Support Us</span>
                             <span class="md:hidden">Donate</span>
