--- a/hackathons.html
+++ b/hackathons.html
@@ -828,12 +828,25 @@
         </div>
     </main>
     
-<footer class="footer">
+    <footer class="footer">
         <div class="container footer-container">
-            <p class="footer-text">© Code Crunch Hackathons. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="index.html" class="footer-link">Become a Code Crunch Member</a>
-                <a href="contact.html" class="footer-link">Contact</a>
+            <div class="footer-content">
+                <p class="footer-description">
+                    An interdisciplinary tech and innovation club empowering students through coding workshops, technical interview prep, and project-based learning. Open to high school students (16+), all majors, and any university worldwide.
+                </p>
+                <p class="footer-website">
+                    <a href="http://codecrunch.cs.fiu.edu" class="footer-website-link">codecrunch.cs.fiu.edu</a>
+                </p>
+                <div class="footer-links">
+                    <a href="index.html" class="footer-link">Become a Code Crunch Member</a>
+                    <a href="contact.html" class="footer-link">Contact</a>
+                </div>
+                <p class="footer-copyright">
+                    © <script>document.write(new Date().getFullYear())</script> Code Crunch. All rights reserved.
+                </p>
+                <p class="footer-credits">
+                    Built with ❤️ for the tech community by <a href="https://www.linkedin.com/in/iba001/" target="_blank" class="footer-credits-link">Brian Bazurto</a> | Powered by innovation and collaboration
+                </p>
             </div>
         </div>
     </footer>
