--- a/hacks-at-fiu-part-1.html
+++ b/hacks-at-fiu-part-1.html
@@ -684,8 +684,8 @@
             <!-- Navigation Links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="hacks-toolkit.html">Hacks Toolkit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="hacks-toolkit.html"target="_blank" rel="noopener noreferrer">Hacks Toolkit</a></li>
                 </ul>
             </div>
         </div>
