--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -1267,7 +1267,7 @@
                     </div>
                     <h3 class="role-title">Volunteer</h3>
                     <p class="role-description">Support our event as a mentor, organizer, judge, or sponsor. Share your expertise, help participants, and be part of shaping the next generation of tech talent.</p>
-                    <a href="#volunteers" class="btn btn-custom btn-accent d-block">Join as Volunteer</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw_lVcTcq7LvLwZbjRx2UVMjLQSR_VdlWQ-3WHezgIr_6oAg/viewform?usp=dialog" class="btn btn-custom btn-accent d-block">Join as Volunteer</a>
                 </div>
             </div>
         </div>
