--- a/HACK-9-305HackathonSpring26.HTML
+++ b/HACK-9-305HackathonSpring26.HTML
@@ -854,10 +854,13 @@
         <p>© 2026 305 Hackathon Edition | Code Crunch Club</p>
         <p>Representing the 305 - Building tech for good in the Magic City! 🌴</p>
         <div style="margin-top: 15px;">
-            <a href="#" style="color: #00d4aa; margin: 0 10px; text-decoration: none;">Contact</a>
-            <a href="#" style="color: #00d4aa; margin: 0 10px; text-decoration: none;">Code of Conduct</a>
-            <a href="#" style="color: #00d4aa; margin: 0 10px; text-decoration: none;">Privacy Policy</a>
+            <a href="contact.html" style="color: #4ecdc4; margin: 0 10px; text-decoration: none;">Contact</a>
+            <a href="hack5-code-of-conduct.html" style="color: #4ecdc4; margin: 0 10px; text-decoration: none;">Code of Conduct</a>
+            <a href="hack4-rules.html" style="color: #4ecdc4; margin: 0 10px; text-decoration: none;">Rules</a>
         </div>
+                <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 1rem;">
+        Built with ❤️ for the tech community by <a href="https://www.linkedin.com/in/iba001/" target="_blank" style="color: #4ecdc4; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">Brian Bazurto</a> | Powered by innovation and collaboration
+    </p>
     </div>
 </footer>
 
