--- a/HACK-8-HackFiestaMiami26.HTML
+++ b/HACK-8-HackFiestaMiami26.HTML
@@ -861,10 +861,13 @@
         <p>© 2026 HackFiesta Miami | Code Crunch Club</p>
         <p>¡Vamos a cambiar el mundo! Code for global impact, innovate for sustainability!</p>
         <div style="margin-top: 15px;">
-            <a href="#" style="color: #ff006e; margin: 0 10px; text-decoration: none;">Contact</a>
-            <a href="#" style="color: #ff006e; margin: 0 10px; text-decoration: none;">Code of Conduct</a>
-            <a href="#" style="color: #ff006e; margin: 0 10px; text-decoration: none;">Privacy Policy</a>
+            <a href="contact.html" style="color: #4ecdc4; margin: 0 10px; text-decoration: none;">Contact</a>
+            <a href="hack5-code-of-conduct.html" style="color: #4ecdc4; margin: 0 10px; text-decoration: none;">Code of Conduct</a>
+            <a href="hack4-rules.html" style="color: #4ecdc4; margin: 0 10px; text-decoration: none;">Rules</a>
         </div>
+                <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 1rem;">
+        Built with ❤️ for the tech community by <a href="https://www.linkedin.com/in/iba001/" target="_blank" style="color: #4ecdc4; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">Brian Bazurto</a> | Powered by innovation and collaboration
+    </p>
     </div>
 </footer>
 
