--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -2487,20 +2487,40 @@ body {
                     </div>
                     <h3 class="role-title">Smart City Builder</h3>
                     <p class="role-description">Join as a participant to build innovative smart city solutions, collaborate with interdisciplinary teams, learn cutting-edge technologies, and compete for prizes. Perfect for students from all majors who want to shape urban futures.</p>
-                    <a href="#hackers" class="btn btn-custom d-block">🏗️ Start Building</a>
+                    <a href="#hackers" class="btn btn-custom d-block">🏗️ Register Now </a>
                 </div>
             </div>
             
             <div class="col-md-6 mb-4">
                 <div class="role-card volunteer p-4">
                     <div class="role-icon">
-                        <i class="fas fa-users-cog"></i>
+                    <i class="fas fa-users-cog"></i>
                     </div>
-                    <h3 class="role-title">Innovation Supporter</h3>
-                    <p class="role-description">Support our smart city hackathon as a mentor, organizer, judge, or sponsor. Share your urban planning expertise, technology knowledge, and help participants create solutions for tomorrow's cities.</p>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw_lVcTcq7LvLwZbjRx2UVMjLQSR_VdlWQ-3WHezgIr_6oAg/viewform?usp=dialog" class="btn btn-custom btn-accent d-block">🤝 Support Innovation</a>
+                    <h3 class="role-title">Get Involved</h3>
+                    <p class="role-description">Join our smart city hackathon! Whether you're an industry leader, student, fundraiser, or sponsor, your support drives innovation for tomorrow's cities.</p>
+
+                    <!-- Industry Leaders - Volunteer -->
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw_lVcTcq7LvLwZbjRx2UVMjLQSR_VdlWQ-3WHezgIr_6oAg/viewform?usp=dialog" class="btn btn-custom btn-accent d-block mb-2">
+                    🤝 Industry Leader – Volunteer
+                    </a>
+
+                    <!-- Students - Volunteer -->
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfkEhtLbNW8Yk4jIFUKfLirPbqjrNOwUZCEJ7d8hoFH8Y9nyw/viewform?usp=dialog" class="btn btn-custom btn-accent d-block mb-2">
+                    🎓 Student – Volunteer
+                    </a>
+
+                    <!-- Industry Leaders – Fundraiser & Advisory Board -->
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1fUyF0lW0Be6W-r1tGUAv7JA5manybTqXN5Ql6RcUlgb7Kw/viewform?usp=dialog" class="btn btn-custom btn-accent d-block mb-2">
+                    💼 Industry Leader – Fundraising Advisory Board
+                    </a>
+
+                    <!-- Become a Sponsor -->
+                    <a href="https://hack-university-fundraiser.vercel.app/" class="btn btn-custom btn-accent d-block">
+                    🌟 Become a Sponsor
+                    </a>
                 </div>
-            </div>
+                </div>
+
         </div>
     </div>
 </section>
