--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -389,6 +389,50 @@
         </div>
     </div>
             
+<div style="margin: 3rem 0; background: rgba(50, 205, 50, 0.15); border-radius: 12px; padding: 1.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(50, 205, 50, 0.3);">
+            <h3 style="color: #32cd32; text-align: center; margin-bottom: 1.5rem; font-size: 1.5rem;">🌟 GET INVOLVED!</h3>
+            <p style="text-align: center; margin-bottom: 1rem; font-size: 1.2rem;">Join our hackathon! Whether you're an industry leader, student, fundraiser, or sponsor, your support drives innovation for tomorrow's cities.</p>
+
+            <div style="text-align: center; margin-top: 20px;">
+                <!-- Industry Leaders - Volunteer -->
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw_lVcTcq7LvLwZbjRx2UVMjLQSR_VdlWQ-3WHezgIr_6oAg/viewform?usp=dialog"
+                target="_blank"
+                class="apply-button"
+                style="background: linear-gradient(135deg, #32cd32, #00c6ff);">
+                🤝 Industry Leader – Volunteer
+                </a>
+
+                <!-- Students - Volunteer -->
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfkEhtLbNW8Yk4jIFUKfLirPbqjrNOwUZCEJ7d8hoFH8Y9nyw/viewform?usp=dialog"
+                target="_blank"
+                class="apply-button"
+                style="background: linear-gradient(135deg, #32cd32, #00c6ff);">
+                🎓 Student – Volunteer
+                </a>
+
+                <!-- Industry Leaders – Fundraiser & Advisory Board -->
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1fUyF0lW0Be6W-r1tGUAv7JA5manybTqXN5Ql6RcUlgb7Kw/viewform?usp=dialog"
+                target="_blank"
+                class="apply-button"
+                style="background: linear-gradient(135deg, #32cd32, #00c6ff);">
+                💼 Industry Leader – Fundraising Advisory Board
+                </a>
+
+                <!-- Become a Sponsor -->
+                <a href="https://hack-university-fundraiser.vercel.app/"
+                target="_blank"
+                class="apply-button"
+                style="background: linear-gradient(135deg, #32cd32, #00c6ff);">
+                🌟 Become a Sponsor
+                </a>
+            </div>
+            </div>
+
+
+
+
+
+
     <!-- Stats Section -->
     <div class="stats-container">
         <div class="stat-item">
