--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -2485,7 +2485,7 @@ body {
                     <div class="role-icon">
                         <i class="fas fa-city"></i>
                     </div>
-                    <h3 class="role-title">Smart City Builder</h3>
+                    <h3 class="role-title">Hacker</h3>
                     <p class="role-description">Join as a participant to build innovative smart city solutions, collaborate with interdisciplinary teams, learn cutting-edge technologies, and compete for prizes. Perfect for students from all majors who want to shape urban futures.</p>
                     <a href="#hackers" class="btn btn-custom d-block">🏗️ Register Now </a>
                 </div>
@@ -2497,7 +2497,7 @@ body {
                     <i class="fas fa-users-cog"></i>
                     </div>
                     <h3 class="role-title">Get Involved</h3>
-                    <p class="role-description">Join our smart city hackathon! Whether you're an industry leader, student, fundraiser, or sponsor, your support drives innovation for tomorrow's cities.</p>
+                    <p class="role-description">Join our 305 Fall hackathon! Whether you're an industry leader, student, fundraiser, or sponsor, your support drives innovation for tomorrow's cities.</p>
 
                     <!-- Industry Leaders - Volunteer -->
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw_lVcTcq7LvLwZbjRx2UVMjLQSR_VdlWQ-3WHezgIr_6oAg/viewform?usp=dialog" class="btn btn-custom btn-accent d-block mb-2">
@@ -2531,7 +2531,7 @@ body {
         <div class="row align-items-center">
             <div class="col-lg-6 mb-4 mb-lg-0">
                 <div class="about-img">
-                    <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?q=80&w=2070&auto=format&fit=crop" alt="Smart City Hackathon" class="img-fluid">
+                    <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?q=80&w=2070&auto=format&fit=crop" alt="305 Hack Fall 2025" class="img-fluid">
                 </div>
             </div>
             
@@ -2588,7 +2588,7 @@ body {
     
         <div id="mysteryBanner" style="text-align: center;">
             <div style="font-size: 3rem; margin-bottom: 20px;">🏙️🔍</div>
-            <h4 style="color: var(--primary); font-size: 1.8rem; margin-bottom: 20px;">305 Hack Smart City Challenges Await!</h4>
+            <h4 style="color: var(--primary); font-size: 1.8rem; margin-bottom: 20px;">305 Hack Fall 2025 Theme Smart City Challenges Await!</h4>
             <p style="font-size: 1.2rem; margin-bottom: 20px;">Each track features unique urban innovation challenges that will be revealed when the hackathon begins on <strong>September 19, 2025 at 11:00 PM</strong>.</p>
             <p style="font-style: italic; color: var(--primary-dark); font-size: 1.1rem;">Build solutions for tomorrow's cities under pressure! ⏱️🌆</p>
         </div>
@@ -3235,13 +3235,13 @@ body {
                 <button class="faq-question">
                     <div class="faq-question-text">
                         <span class="faq-question-mark">Q.</span>
-                        <span>What is a smart city hackathon?</span>
+                        <span>What is 305 Hack Fall 2025?</span>
                     </div>
                     <span class="faq-toggle-icon">+</span>
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        A smart city hackathon is an intensive innovation event focused on creating technology solutions for urban challenges. Participants build projects related to smart infrastructure, digital governance, sustainable transportation, IoT systems, and other urban technologies. You'll attend workshops, work with mentors, and compete for prizes while addressing real city problems.
+                        The 305 Hack Fall 2025  is an intensive innovation event focused on creating technology solutions for urban challenges. Participants build projects related to smart infrastructure, digital governance, sustainable transportation, IoT systems, and other urban technologies. You'll attend workshops, work with mentors, and compete for prizes while addressing real city problems.
                     </div>
                 </div>
             </div>
@@ -3267,13 +3267,13 @@ body {
                 <button class="faq-question">
                     <div class="faq-question-text">
                         <span class="faq-question-mark">Q.</span>
-                        <span>Is there a registration fee for the smart city hackathon?</span>
+                        <span>Is there a registration fee for the 305 Hack Fall 2025?</span>
                     </div>
                     <span class="faq-toggle-icon">+</span>
                 </button>
                 <div class="faq-answer">
                     <div class="faq-answer-content">
-                        No, our smart city hackathon is completely free for all participants! We believe urban innovation should be accessible to everyone interested in building better cities, regardless of financial background.
+                        No, our 305 Hack Fall 2025 is completely free for all participants! We believe urban innovation should be accessible to everyone interested in building better cities, regardless of financial background.
                     </div>
                 </div>
             </div>
@@ -3315,7 +3315,7 @@ body {
                 <button class="faq-question">
                     <div class="faq-question-text">
                         <span class="faq-question-mark">Q.</span>
-                        <span>What should I bring to the smart city hackathon?</span>
+                        <span>What should I bring to the 305 Hack Fall 2025?</span>
                     </div>
                     <span class="faq-toggle-icon">+</span>
                 </button>
@@ -3331,7 +3331,7 @@ body {
                 <button class="faq-question">
                     <div class="faq-question-text">
                         <span class="faq-question-mark">Q.</span>
-                        <span>Are travel stipends available for the smart city hackathon?</span>
+                        <span>Are travel stipends available for the 305 Hack Fall 2025?</span>
                     </div>
                     <span class="faq-toggle-icon">+</span>
                 </button>
@@ -3357,7 +3357,7 @@ body {
                         <br><br>
                         For complete judging criteria and smart city project tips, check out our 
                         <a href="hacks-toolkit.html" target="_blank" style="color: var(--accent); text-decoration: underline;">
-                            Smart City Hackathon Toolkit
+                            305 Hack Fall 2025 Toolkit
                         </a>!
                     </div>
                 </div>
