--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -1133,7 +1133,8 @@ body::before {
                         <div class="checklist-number">2</div>
                         <div class="checklist-text">
                             <strong>RSVP on Luma</strong> for each hack's sessions if applicable.<br>
-                            <span style="color: var(--text-light);">Links will be provided via email and Discord announcements.</span>
+                            <span style="color: var(--text-light);">Each hackathon has its own special events — check the Luma calendar closer to the hackathon date  for updates.</span>
+
                         </div>
                     </li>
                     
