--- a/RENDER.html
+++ b/RENDER.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://codecrunchglobal.vercel.app/wiki.html">
+<meta http-equiv="refresh" content="0; url=https://codecrunchglobal.vercel.app/cc-wiki.html">
 </head>
 <body></body>
 </html>
