--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackathon ZOOM PORTAL | HACK UNIVERSITY Matrix</title>
+    <title>Volunteer Guide HACK UNIVERSITY Matrix</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -1154,10 +1154,10 @@ body::before {
         </div>
     </nav>
     <header class="header">
-        <div class="container header-container">
-            <h1 class="header-title glitch" data-text="HACK ZOOM PORTAL">HACKER GUIDE</h1>
-            <p class="header-subtitle">Join the elite hacker collective and gain access to our Discord community. Complete registration to receive your invite and start your mission.</p>
-        </div>
+    <div class="container header-container">
+        <h1 class="header-title glitch" data-text="VOLUNTEER GUIDE">VOLUNTEER GUIDE</h1>
+        <p class="header-subtitle">Join the Code Crunch volunteer collective and help shape the future of CS students during the School year and hackathons. Complete the volunteer process to get confirmed and start your mission.</p>
+    </div>
     </header>
 
     <main class="content">
