--- a/HACK-4-SummerCodeX25.HTML
+++ b/HACK-4-SummerCodeX25.HTML
@@ -380,8 +380,8 @@
                 <i class="fas fa-rocket me-2"></i> Register Now
             </a>
             
-            <a href="https://witty-suede-4a1.notion.site/HACKS-at-FIU-Wiki-Students-only-1ee7f868cc8c806183f4f8ede9d5d0a3" target="_blank" class="apply-button" style="background: linear-gradient(135deg, #32cd32, #00c6ff);">
-                <i class="fas fa-book me-2"></i> HACKS at FIU Wiki
+            <a href="https://hacksatfiu.vercel.app/" target="_blank" class="apply-button" style="background: linear-gradient(135deg, #32cd32, #00c6ff);">
+                <i class="fas fa-book me-2"></i> Hacker Guide
             </a>
             <a href="hacks-toolkit.html" target="_blank" class="apply-button" style="background: linear-gradient(135deg, #32cd32, #00c6ff);">
                 <i class="fas fa-toolbox me-2"></i> Hacks Toolkit
