--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -1193,7 +1193,7 @@ body::before {
             <div class="checklist-text">
                 <strong>Apply</strong><br>
                 Complete the <strong>Volunteer Application (Form No. 1)</strong> to sign up as a judge, mentor, speaker, or other volunteer.<br>
-                <a href="#wiki" class="checklist-link">
+                <a href="https://codecrunchvolunteerform-no1.vercel.app" class="checklist-link">
                     <i class="bi bi-link-45deg"></i> Access Volunteer Application (Form No. 1)
                 </a><br>
                 <span style="color: var(--text-light);">Only one submission needed per role. If your info changes, submit a new form — the most recent version will be used.</span>
@@ -1215,11 +1215,11 @@ body::before {
                 <strong>Speakers & Mentors (Required)</strong><br>
                 If you are a speaker or mentor:<br>
                 • Use <strong>Form No. 3</strong> to propose your <strong>Speaker or Workshop</strong> session (technical or non-technical)<br>
-                <a href="#wiki" class="checklist-link">
+                <a href="https://codecrunchvolunteerform-no3.vercel.app" class="checklist-link">
                     <i class="bi bi-link-45deg"></i> Access Speaker/Workshop Form (Form No. 3)
                 </a><br>
                 • Use <strong>Form No. 4</strong> to share your <strong>Mentor Time-Slot Availability</strong> so we can match you with students<br>
-                <a href="#wiki" class="checklist-link">
+                <a href="https://codecrunchvolunteerform-no4.vercel.app" class="checklist-link">
                     <i class="bi bi-link-45deg"></i> Access Mentor Availability Form (Form No. 4)
                 </a>
             </div>
@@ -1231,11 +1231,11 @@ body::before {
                 <strong>For Industry Leaders (Optional)</strong><br>
                 Industry professionals may also:<br>
                 • Use <strong>Form No. 5</strong> to join as an <strong>Industry Leader Organizer</strong> (help plan events, logistics, partnerships)<br>
-                <a href="#wiki" class="checklist-link">
+                <a href="https://codecrunchvolunteerform-no5.vercel.app" class="checklist-link">
                     <i class="bi bi-link-45deg"></i> Access Industry Leader Organizer Form (Form No. 5)
                 </a><br>
                 • Use <strong>Form No. 6</strong> to join our <strong>Fundraising Advisory Board</strong> (support sponsorship outreach and fundraising)<br>
-                <a href="#wiki" class="checklist-link">
+                <a href="https://codecrunchvolunteerform-no6.vercel.app" class="checklist-link">
                     <i class="bi bi-link-45deg"></i> Access Fundraising Advisory Board Form (Form No. 6)
                 </a>
             </div>
