--- a/RE-COMMENTS-CODE.html
+++ b/RE-COMMENTS-CODE.html
@@ -21,11 +21,20 @@ HTML
 
 JavaScript
 
-// End Enhanced JavaScript for Volunteers Showcase Section
+// navigation JavaScript
 //**************
 //**************
 //**************
 //**************
 //**************
-// End Enhanced JavaScript for Volunteers Showcase Section
+//**************
+
+
+// END - navigation JavaScript
+//**************
+//**************
+//**************
+//**************
+//**************
+//**************
 
