--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -4380,7 +4380,63 @@ body {
                         </div>
                     </div>
                 </div>
+
+                                <!-- Volunteer 4 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="David Chen" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Shankar Salwan</h4>
+                            <p class="volunteer-experience">Experience: Senior Engineer at Found (found.com)</p>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- Volunteer 5 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="David Chen" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Shekhar Das</h4>
+                            <p class="volunteer-experience">Experience: Assistant Project Manager at RAVA Construction, LLC</p>
+                        </div>
+                    </div>
+                </div>
                 
+                               <!-- Volunteer 6 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="David Chen" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Ather Husain</h4>
+                            <p class="volunteer-experience">Experience: Technical Architect at Capgemini</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Volunteer 7 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="David Chen" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Levi Ratnakar Allam</h4>
+                            <p class="volunteer-experience">Experience: Senior Software Engineer at IIT Bhubaneswar</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Volunteer 4 -->
                 <!-- <div class="col-lg-4 col-md-6 mb-4">
                     <div class="volunteer-profile-card">
