--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -4437,6 +4437,48 @@ body {
                     </div>
                 </div>
 
+                                <!-- Volunteer 8 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="David Chen" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Andrii Humeniuk</h4>
+                            <p class="volunteer-experience">Experience: Lead SWE at Dub</p>
+                        </div>
+                    </div>
+                </div>
+
+                               <!-- Volunteer 9 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="David Chen" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Amy Cannon</h4>
+                            <p class="volunteer-experience">Experience: Technical Account Manager / Integration Consultant at Voucherify</p>
+                        </div>
+                    </div>
+                </div>
+
+                                               <!-- Volunteer 10 -->
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="volunteer-profile-card">
+                        <div class="volunteer-avatar">
+                            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="David Chen" class="volunteer-img">
+                            <div class="volunteer-role-badge inperson">Volunteer</div>
+                        </div>
+                        <div class="volunteer-info">
+                            <h4 class="volunteer-name">Jay  Mahendrakuma Sheth</h4>
+                            <p class="volunteer-experience">Experience: Sr. Software Engineer at T. Rowe Price</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Volunteer 4 -->
                 <!-- <div class="col-lg-4 col-md-6 mb-4">
                     <div class="volunteer-profile-card">
