--- a/hackathons-discord.html
+++ b/hackathons-discord.html
@@ -1089,7 +1089,7 @@ body::before {
     </nav>
     <header class="header">
         <div class="container header-container">
-            <h1 class="header-title glitch" data-text="HACK DISCORD PORTAL">HACK DISCORD PORTAL</h1>
+            <h1 class="header-title glitch" data-text="HACK DISCORD PORTAL">HACK UNIVERSITY DISCORD PORTAL</h1>
             <p class="header-subtitle">Join the elite hacker collective and gain access to our Discord community. Complete registration to receive your invite and start your mission.</p>
         </div>
     </header>
