--- a/hackathons-wiki.html
+++ b/hackathons-wiki.html
@@ -1153,12 +1153,12 @@ body::before {
             </div>
         </div>
     </nav>
-    <header class="header">
-        <div class="container header-container">
-            <h1 class="header-title glitch" data-text="HACK ZOOM PORTAL">HACK UNIVERSITY HACKER GUIDE</h1>
-            <p class="header-subtitle">Join the elite hacker collective and gain access to our Discord community. Complete registration to receive your invite and start your mission.</p>
-        </div>
-    </header>
+        <header class="header">
+            <div class="container header-container">
+                <h1 class="header-title glitch" data-text="HACK UNIVERSITY HACKER GUIDE">HACK UNIVERSITY HACKER GUIDE</h1>
+                <p class="header-subtitle">Join the elite hacker collective and gain access to our Discord community. Open to all students, any university, major, high school (16+). Exclusions for some countries / territories apply based on Devpost restrictions. Complete registration to receive your invite and start your mission.</p>
+            </div>
+        </header>
 
     <main class="content">
         <div class="container">
